# api/models/post.go
@@ -1,0 +1,32 @@
+package models
+
+import "time"
+
+type Post struct {
+	ID          int64      `json:"id"`
+	Title       string     `json:"title"`
+	Description string     `json:"description"`
+	ImageUrl    string    `json:"image_url"`
+	UserID      int64      `json:"user_id"`
+	CategoryID  int64      `json:"category_id"`
+	UpdatedAt   time.Time `json:"updated_at"`
+	ViewsCount  int32      `json:"views_count"`
+	CreatedAt   time.Time  `json:"created_at"`
+}
+
+type CreatePostRequest struct {
+	Title       string  `json:"title"`
+	Description string  `json:"description"`
+	ImageUrl    string `json:"image_url"`
+	UserID      int64   `json:"user_id"`
+	CategoryID  int64   `json:"category_id"`
+}
+
+type GetAllPostsParams struct {
+	Limit      int32  `json:"limit" binding:"required" default:"10"`
+	Page       int32  `json:"page" binding:"required" default:"1"`
+	Search     string `json:"search"`
+	UserID     int64  `json:"user_id"`
+	CategoryID int64  `json:"category_id"`
+	SortByData string `json:"sort_by_date" enums:"asc,desc" default:"desc"`
+}
